--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,6 @@
 #################
 
 *.pydevproject
-.project
 .metadata
 bin/
 tmp/
@@ -12,7 +11,6 @@ tmp/
 *.swp
 *~.nib
 local.properties
-.classpath
 .settings/
 .loadpath
 
@@ -28,7 +26,7 @@ local.properties
 # PDT-specific
 .buildpath
 
-
+*.dat
 #################
 ## Visual Studio
 #################
